--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-THEME=https://raw.githubusercontent.com/deathau/80s-Neon-for-Obsidian.md/master/obsidian.css
+THEME=https://raw.githubusercontent.com/selfire1/obsidian-you-theme/main/obsidian.css
 BASE_THEME=dark
